deploy/k8s/cluster/mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    istio.io/dataplane-mode: ambient

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql-master
  namespace: mysql
spec:
  parentRefs:
    - name: istio-gateway
      kind: Gateway
      namespace: istio-system
      sectionName: tcp-mysql-master
  rules:
    - backendRefs:
        - name: mysql-master
          port: 3306
          namespace: mysql
          kind: Service
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql-slave
  namespace: mysql
spec:
  parentRefs:
    - name: istio-gateway
      kind: Gateway
      namespace: istio-system
      sectionName: tcp-mysql-slave
  rules:
    - backendRefs:
        - name: mysql-slave
          port: 3307
          namespace: mysql
          kind: Service
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-master-hl
  namespace: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: tcp-mysql
      appProtocol: mysql
  clusterIP: None
  selector:
    app: mysql-master
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave-hl
  namespace: mysql
spec:
  ports:
    - port: 3307
      protocol: TCP
      targetPort: 3307
      name: tcp-mysql
      appProtocol: mysql
  clusterIP: None
  selector:
    app: mysql-slave
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  namespace: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: tcp-mysql
      appProtocol: mysql
  type: ClusterIP
  selector:
    app: mysql-master
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave
  namespace: mysql
spec:
  ports:
    - port: 3307
      targetPort: 3307
      name: tcp-mysql
      appProtocol: mysql
  type: ClusterIP
  selector:
    app: mysql-slave
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-master
  namespace: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-master
  serviceName: mysql-master-hl
  template:
    metadata:
      labels:
        app: mysql-master
        app.kubernetes.io/version: 8.4.6
    spec:
      containers:
        - name: mysql-master
          image: mysql:8.4.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /docker-entrypoint-initdb.d/master_init.sh
              name: init
              subPath: master_init.sh
            - mountPath: /etc/mysql/my.cnf
              name: init
              subPath: my.cnf
            - mountPath: /etc/localtime
              name: time
          startupProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            failureThreshold: 5
            periodSeconds: 5
      volumes:
        - name: data
          hostPath:
            path: /data/mysql/data
            type: DirectoryOrCreate
        - name: init
          configMap:
            name: mysql-cm
        - name: time
          hostPath:
            path: /etc/localtime
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - master
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-slave
  namespace: mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql-slave
  serviceName: mysql-slave-hl
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: mysql-slave
        app.kubernetes.io/version: 8.4.6
    spec:
      containers:
        - name: mysql-slave
          image: mysql:8.4.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3307
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /docker-entrypoint-initdb.d/slave_init.sh
              name: init
              subPath: slave_init.sh
            - mountPath: /etc/mysql/my.cnf
              name: cnf
              subPath: my.cnf
            - mountPath: /etc/localtime
              name: time
          startupProbe:
            tcpSocket:
              port: 3307
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 3307
            initialDelaySeconds: 15
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3307
            initialDelaySeconds: 20
            failureThreshold: 5
            periodSeconds: 5
      volumes:
        - name: data
          hostPath:
            path: /data/mysql/data
            type: DirectoryOrCreate
        - name: init
          configMap:
            name: mysql-cm
        - name: cnf
          emptyDir: { }
        - name: time
          hostPath:
            path: /etc/localtime
            type: File
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - slave
